--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <div>
+        <h2>Irshad Akaram</h2>
         <p> (a) Apply in-line CSS to change colors of certain text portion, bold, underline and italics 
             certain words in your HTML web page. Also change background color of each paragraph 
             using in-line CSS.</p>
